--- a/index.html
+++ b/index.html
@@ -8,8 +8,58 @@
   </head>
   <body>
     <div id="app">
-      <div id="counter1"></div>
-      <div id="counter2"></div>
+    </div>
+    <div class="initial-snow">
+      <div class="snow">🍻</div>
+      <div class="snow">🍻</div>
+      <div class="snow">🍻</div>
+      <div class="snow">🍻</div>
+      <div class="snow">🍻</div>
+      <div class="snow">🍻</div>
+      <div class="snow">🍻</div>
+      <div class="snow">🍻</div>
+      <div class="snow">🍻</div>
+      <div class="snow">🍻</div>
+      <div class="snow">🍻</div>
+      <div class="snow">🍻</div>
+      <div class="snow">🍻</div>
+      <div class="snow">🍻</div>
+      <div class="snow">🍻</div>
+      <div class="snow">🍻</div>
+      <div class="snow">🍻</div>
+      <div class="snow">🍻</div>
+      <div class="snow">🍻</div>
+      <div class="snow">🍻</div>
+      <div class="snow">🍻</div>
+      <div class="snow">🍻</div>
+      <div class="snow">🍻</div>
+      <div class="snow">🍻</div>
+      <div class="snow">🍻</div>
+      <div class="snow">🍻</div>
+      <div class="snow">🍻</div>
+      <div class="snow">🍻</div>
+      <div class="snow">🍻</div>
+      <div class="snow">🍻</div>
+      <div class="snow">🍻</div>
+      <div class="snow">🍻</div>
+      <div class="snow">🍻</div>
+      <div class="snow">🍻</div>
+      <div class="snow">🍻</div>
+      <div class="snow">🍻</div>
+      <div class="snow">🍻</div>
+      <div class="snow">🍻</div>
+      <div class="snow">🍻</div>
+      <div class="snow">🍻</div>
+      <div class="snow">🍻</div>
+      <div class="snow">🍻</div>
+      <div class="snow">🍻</div>
+      <div class="snow">🍻</div>
+      <div class="snow">🍻</div>
+      <div class="snow">🍻</div>
+      <div class="snow">🍻</div>
+      <div class="snow">🍻</div>
+      <div class="snow">🍻</div>
+      <div class="snow">🍻</div>
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
